[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bathymetry-experiments"
version = "0.1.0"
description = "Unified bathymetry experiment pipeline for the LLM-guided paper code."
requires-python = ">=3.10"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
bathy-exp = "bathymetry_experiments.cli:main"
